[feat] Added real time chat feature.
